tests/machine/x/ocaml/string_index.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_index.ml", line 21, characters 34-35:
21 |   print_endline (__show (List.nth s 1));
                                       ^
Error: This expression has type string but an expression was expected of type
         'a list


Context (around line 21):
  19 | 
  20 | let () =
  21 |   print_endline (__show (List.nth s 1));
  22 | 
